tests/NormalTests/paczka1/small_fuzzy/81828223.err
Error in line 1: TzCeMOmypKS A430 18,3
Error in line 5: TzCeMOmypKS S436 99,8
